# webdev-workshop

./: .gitignore  Dockerfile  LICENSE  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
blog/: settings.py  urls.py
blog_app/: admin.py  forms.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_alter_post_edit_date.py
blog_app/templates/blog_app/: create_post.html  edit_post.html  index.html  post.html
blog_app/templates/blog_app/include/: comment_creation.html  post.html
homepage/: views.py
homepage/templates/homepage/: index.html  login.html  register.html
templates/: base.html
