[project]
name = "ofahrt-webdev"
version = "0.1.0"
description = "The template for the OFahrt 2025 Webdev Workshop."
authors = [
    { name = "Per Göttlicher", email = "per.goettlicher@stud.tu-darmstadt.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.4,<2026.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
django-extensions = "^4.1"

[tool.djlint]
use_gitignore = true
profile = "django"
ignore = "H030,H031,H029"

[tool.poetry]
package-mode = false
